<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Akhil Mandai Mandal</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_profiles" tools:ignore="MissingTranslation">Admin Login</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="History">History</string>
    <string name="Contact">Contact</string>
    <string name="Marathi">Marathi</string>
    <string name="Hindi">Hindi</string>
    <string name="About">About Us</string>
    <string name="StudentAdop">Student Adaptation</string>
    <string name="homepagefirst">Akhil Mandai Mandal and its Sharada-Ganesh idol is one of the main attractions of Pune’s Ganesh festival. Celebrating its 129th year, the mandal is witness to freedom struggle and progressive reforms associated with the city.</string>
    <string name="homepagetwo">Mandai, the vegetable market in the old city that has a rich history spanning over 125 years of history, was dominated by a few families, who initiated public celebrations of Ganesh festival and formed the Akhil Mandai Mandal.</string>
    <string name="change_language">Change Language</string>
    <string name="akhil_mandai_mandal">Akhil Mandai Mandal</string>
    <string name="contact_us">Contact Us</string>
    <string name="full_name">Full Name *</string>
    <string name="email">Email *</string>
    <string name="form">Student Adaptation Form</string>
    <string name="mobile">Mobile *</string>
    <string name="comment">Comment *</string>
    <string name="submit">Submit</string>
    <string name="all_rights_reserved_akhilmandaimandal_2022">All rights reserved @AkhilMandaiMandal 2022</string>
    <string name="we_are_eco_friendly">We are Eco Friendly</string>
    <string name="akhil_mandai_mandal_and_its_sharada_ganesh_idol_is_one_of_the_main_attractions_of_pune_s_ganesh_festival_sharda_gajanan_idol_is_made_from_eco_friendly_material">Akhil Mandai Mandal and its Sharada-Ganesh idol is one of the main attractions of Pune’s Ganesh festival, Sharda Gajanan Idol is made from eco friendly material.</string>
    <string name="student_adoption">Student Adoption</string>
    <string name="every_year_on_the_occasion_of_dahi_handi_utsav_gokulashtami_we_adopt_student_s_for_their_better_educational_future_under_bal_kamgar_dattak_yojana_which_is_run_by_our_mandal">Every year on the occasion of Dahi Handi Utsav (Gokulashtami) we adopt student\'s for their better educational future under bal kamgar dattak yojana which is run by our Mandal.</string>
    <string name="fight_against_covid_19">Fight Against Covid-19</string>
    <string name="in_this_covid_pandemic_situation_our_mandal_organised_various_programs_to_help_the_less_fortunates_get_out_these_tough_times">In this Covid pandemic situation our Mandal organised various programs to help the less fortunates get out these tough times.</string>
    <string name="select_language">Select Language</string>
    <string name="social_services">Social Services</string>
    <string name="visit_social_media">Visit Social Media</string>
    <string name="donation">Donation</string>
    <string name="history">History</string>
    <string name="histoname1">1894</string>
    <string name="histoname2">1953</string>
    <string name="histoname3">1954</string>
    <string name="histoname4">2017</string>
    <string name="histotext1" translatable="false" tools:ignore="MissingTranslation">Kaka Laxmanrao Dongre Kachi (wrestler) was a devoted follower of Tuljapur Bhavani Mata. They did not have any children. They made a vow to Tuljabhavani Mata that if they were blessed with a child, they would create a replica of the idol of Sharada Gajanan, which is located at your Kalsar, and celebrate a festival. They started the tradition of the public Ganesh festival in 1894 with a paper flag, cow, goats, sheep, and water from seven rivers. As this idol is quite large, they donated it to the present Akhil Mandai Mandal (Chhatrapati Shivaji Sangh).</string>
    <string name="aboutustext1" translatable="false">The Sharada Ganapati of Akhil Mandai Ganeshotsav Mandal is a revered deity and a symbol of pride for Pune. On September 14, 1893, Lokmanya Tilak inaugurated the installation of this public Ganapati idol on the auspicious occasion of Ganesh Chaturthi. In 1894, the Akhil Mandai Ganesh Mandal was established. In 1993, a special commemorative magazine was created to celebrate the completion of its centennial. The Ganapati idol of Mandai holds immense significance and is a place of devotion for millions of devotees. This Ganapati holds a special place in the hearts of all devotees and is considered a divine symbol. The history of this Ganapati, which has attained great importance in the lives of Punekars, is truly captivating.</string>
    <string name="aboutsustext2" translatable="false">K. Lakshmanrao Dongre Kachi (wrestler) was an ardent devotee of Tuljapur Bhavani Mata. They did not have any children. They made a vow to Tuljabhavani Mata that if they were blessed with a child, they would create a replica of the idol of Sharada Ganapati that is present in your temple and celebrate a grand festival. Nowadays, it is suggested to create eco-friendly idols during idol-making, but during that time, this idol was made of paper mache, clay, plaster of Paris, sand, and water from the seven rivers. However, since this idol was larger in size, they dedicated this idol (Chhatrapati Shivaji Sangh) to the present Akhil Mandai Mandal, and thereafter, this festival started to be celebrated on a larger scale. In 1894, they created a second idol, but it got damaged.</string>
    <string name="aboutustext3" translatable="false">In 1954, the Mandal installed a second idol. However, whenever a new idol was installed, obstacles arose during the festival. On two occasions, the pandal caught fire while attempting to install the new idol, resulting in the complete destruction of the pandal. However, the Ganesh idol remained unharmed. Despite multiple attempts to install a new idol at a different location, the efforts were unsuccessful due to obstacles. Consequently, it was realized that the original idol should continue to be worshipped during the festival, and changing the location or tradition of the idol was not feasible. This order from Lord Ganapati, to preserve the tradition and not make any changes, became deeply ingrained in the minds of the devotees. As a result, no alterations are made now, and the tradition is diligently followed.</string>
    <string name="aboutustext4" translatable="false">In 1965, there was an attempt to relocate this Ganapati idol, but it was not successful. The entire atmosphere became tense and uncomfortable. The emotions of the people of Pune are deeply connected to this Ganapati, and it is a revered place for millions of devotees. During Ganesh Chaturthi, countless devotees, film actors, dignitaries from all walks of life, and renowned organizations from various social and political spheres come to seek the darshan and blessings of Sharada Ganapati. They visit with devotion and offer their prayers, seeking fulfillment of their wishes. They place their heartfelt desires in front of the deity and believe that their desires will be fulfilled with the grace of Lord Ganapati.</string>
    <string name="aboutustext5" translatable="false">The immersion procession of Mandai Ganapati is a memorable moment filled with immense joy, and thousands of devotees feel blessed witnessing this spectacle. The grandeur of the Ganesh Visarjan (immersion) during Punes. Ganesh festival is a moment of ultimate bliss that one is fortunate to witness with their own eyes. Afterward, devotees feel a sense of longing and bid farewell to Lord Ganesh with teary eyes, looking forward to the coming year. However, along with the immersion of Mandai Ganapati, this festival signifies the continuity of the tradition. The recognition of Sharada Ganapati is synonymous with the Ganapati idol placed on the bed, and this year, on August 22, 2020, Sharada Ganapati will be present during the festival. Therefore, let us eagerly await and take the opportunity to seek the darshan and receive the blessings of Sharada Ganapati during this years festival.</string>
    <string name="studentadap1">Dahi Handi Utsav, also known as Gokulashtami, is a vibrant festival celebrated with great enthusiasm across the country. On this auspicious occasion, our Mandal takes immense pride in introducing the Bal Kamgar Dattak Yojana, a transformative initiative aimed at empowering students and shaping their educational journey for a brighter future.</string>
    <string name="studentadap2">The primary objective of the Bal Kamgar Dattak Yojana is to provide educational support and guidance to deserving students, enabling them to excel academically and unlock their true potential. Through this initiative, we strive to foster a nurturing environment that nurtures talent, fosters growth, and promotes educational opportunities for the underprivileged.</string>
    <string name="studentadap3">Under this scheme, we adopt students who demonstrate exceptional potential and commitment to their education. By providing financial assistance, mentorship, and access to educational resources, we aim to create a solid foundation for their educational journey. Through personalized guidance and regular monitoring, we ensure that these students receive the necessary support to overcome barriers and achieve their educational goals.</string>
    <string name="studentadap4">Through the Bal Kamgar Dattak Yojana, we provide financial assistance to cover various educational expenses, including school fees, textbooks, stationery, uniforms, and other essentials. We understand that financial constraints should not hinder a students access to quality education, and thus, we strive to alleviate the burden on their families by offering this crucial support.</string>
    <string name="studentadap5">In addition to financial aid, we believe in the power of mentorship and guidance. Our dedicated team of mentors and volunteers work closely with the adopted students, offering academic support, career counseling, and personal development guidance. By providing a nurturing environment, we aim to inspire and motivate these students to realize their true potential and pursue their dreams with confidence.</string>
    <string name="studentadap6">Access to quality educational resources is essential for a well-rounded education. Through the Bal Kamgar Dattak Yojana, we ensure that adopted students have access to a wide range of educational resources, including books, reference materials, and digital learning tools. We aim to bridge the educational gap and provide them with equal opportunities to thrive academically.</string>
    <string name="studentadap7">We strongly believe that the success of these students lies in the collective effort of the community. Hence, we actively engage the community, seeking their support and involvement in shaping the future of these bright minds. By fostering a sense of social responsibility, we encourage individuals and organizations to contribute towards this noble cause and become agents of change.</string>
</resources>