<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_vector"
            android:title="@string/menu_home"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/history_vector"
            android:title="@string/history"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/contactUsFragment"
            android:icon="@drawable/contactus_vector"
            android:title="@string/Contact"
            android:menuCategory="secondary"/>
    </group>


    <item android:title="@string/select_language"
        android:menuCategory="secondary"/>

    <item android:title="@string/social_services"
        android:menuCategory="secondary">
        <menu>
            <item android:id="@+id/donation"
                  android:icon="@drawable/dnremovebg"
                  android:title="@string/donation" />
            <item android:id="@+id/socialmedia"
                  android:icon="@drawable/media_vector"
                  android:title="@string/visit_social_media"/>
        </menu>

    </item>


</menu>