<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.amm.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_mainFragment_to_aboutUsFragment"
            app:destination="@id/aboutUsFragment" />
        <action
            android:id="@+id/action_mainFragment_to_studentAdaptation"
            app:destination="@id/studentAdaptation" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.amm.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.amm.ui.slideshow.SlideshowFragment"
        android:label="@string/History"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/contactUsFragment"
        android:name="com.example.amm.Fragment.ContactUsFragment"
        android:label="@string/Contact"
        tools:layout="@layout/fragment_contact_us" />
    <fragment
        android:id="@+id/marathiFragment"
        android:name="com.example.amm.Fragment.MarathiFragment"
        android:label="@string/Marathi"
        tools:layout="@layout/fragment_marathi" />
    <fragment
        android:id="@+id/hindiFragment"
        android:name="com.example.amm.Fragment.HindiFragment"
        android:label="@string/Hindi"
        tools:layout="@layout/fragment_hindi" />

    <fragment
        android:id="@+id/aboutUsFragment"
        android:name="com.example.amm.ui.home.aboutUsFragment"
        android:label="@string/About" />

    <fragment
        android:id="@+id/studentAdaptation"
        android:name="com.example.amm.ui.home.StudentAdopFragment"
        android:label="@string/StudentAdop">

        <action
            android:id="@+id/action_mainFragment_to_StudentForm"
            app:destination="@id/studentAdaptationForm" />
    </fragment>

    <fragment
        android:id="@+id/studentAdaptationForm"
        android:name="com.example.amm.Fragment.StudentForm"
        android:label="@string/form" />






</navigation>